[tool.poetry]
name = "pynormalizenumexp"
version = "0.1.0"
description = "NormalizeNumExp for Python"
authors = ["tkscode"]
license = "BSD 3-Clause"
readme = "README.md"
repository = "https://github.com/tkscode/pyNormalizeNumExp"
homepage = "https://github.com/tkscode/pyNormalizeNumExp"
keywords = ["Python", "NLP", "NormalizeNumExp"]
packages = [
    { include = "pynormalizenumexp" },
]
include = [
  "pynormalizenumexp/py.typed",
  "pynormalizenumexp/resources/**/*.json"
]

[tool.poetry.dependencies]
python = ">=3.7,<=3.9"
typing-extensions = {version = "^3"}

[tool.poetry.dev-dependencies]
autopep8 = {version = "1.5.7"}
bandit = {version = "1.7.0"}
flake8 = {version = "3.9.2"}
flake8-bandit = {version = "2.1.2"}
flake8-docstrings = {version = "1.6.0"}
flake8-isort = {version = "4.0.0"}
isort = {version = "5.9.3"}
mypy = {version = "0.910"}
pytest = {version = "6.2.4"}
pytest-cov = {version = "2.12.1"}
pyproject-flake8 = {version = "0.0.1a2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
